<resources>
    <string name="app_name">CEEP iD</string>
    <string name="termo">Declaro que li e aceito os</string>
    <string name="termo_de_uso"><a href='https://pages.flycricket.io/ceep-id/terms.html'>termos de uso</a></string>
    <string name="politica_de_privacidade"><a href='https://pages.flycricket.io/ceep-id/privacy.html'>politica de privacidade</a>.</string>
    <string name="termo_url">https://pages.flycricket.io/ceep-id/terms.html</string>
    <string name="politica_url">https://pages.flycricket.io/ceep-id/privacy.html</string>
    <string name="demorando_muito">Demorando muito?</string>
    <string name="recarregar">Recarregar</string>
    <string name="carregando_dados">Carregando dados…</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="em_aula">Em aula</string>
    <string name="fora_do_horario">Fora do horário de aula</string>
    <string name="liberado">Liberado</string>
    <string name="erro">Erro ao receber dados.</string>
    <string name="internet">Sem conexão com a internet.</string>

    <string-array name="turmas">
        <item>Selecione o curso…</item>
        <item>Técnico em Administração</item>
        <item>Técnico em Logística</item>
        <item>Técnico em Meio Ambiente</item>
    </string-array>
    <string-array name="Ano">
        <item>Selecione o ano…</item>
        <item>1º Ano</item>
        <item>2º Ano</item>
        <item>3º Ano</item>
    </string-array>
    <string-array name="Selecionar">
        <item>Selecione ano e curso…</item>
    </string-array>
    <string-array name="Salas_LOG_1">
        <item>1 LOG M1</item>
        <item>1 LOG M2</item>
        <item>1 LOG M3</item>
        <item>1 LOG V1</item>
        <item>1 LOG V2</item>
    </string-array>
    <string-array name="Salas_LOG_2">
        <item>2 LOG M1</item>
        <item>2 LOG V1</item>
        <item>2 LOG V2</item>
    </string-array>
    <string-array name="Salas_LOG_3">
        <item>3 LOG M1</item>
        <item>3 LOG M2</item>
        <item>3 LOG V1</item>
        <item>3 LOG V2</item>
        <item>3 LOG V3</item>
        <item>3 LOG V4</item>
    </string-array>
    <string-array name="Salas_ADM_1">
        <item>1 ADM M1</item>
        <item>1 ADM M2</item>
        <item>1 ADM M3</item>
        <item>1 ADM M4</item>
        <item>1 ADM V1</item>
        <item>1 ADM V2</item>
    </string-array>
    <string-array name="Salas_ADM_2">
        <item>2 ADM M1</item>
        <item>2 ADM V1</item>
    </string-array>
    <string-array name="Salas_ADM_3">
        <item>3 ADM M1</item>
        <item>3 ADM V1</item>
        <item>3 ADM V2</item>
        <item>3 ADM V3</item>
        <item>3 ADM V4</item>
    </string-array>
    <string-array name="Salas_MAM_1">
        <item>1 MAM M1</item>
    </string-array>
    <string-array name="Salas_MAM_2">
        <item>2 MAM M1</item>
    </string-array>
    <string-array name="Salas_MAM_3">
        <item>3 MAM M1</item>
    </string-array>
    <string name="appwidget_text">Login necessário</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Monitor de Liberação</string>
</resources>