<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.CEEPiD.DayNight.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="65dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:srcCompat="@drawable/fingerprint" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_caf" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:hint="Digite seu nome..."
        android:inputType="none"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCadastro" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/editTurma"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/turmas"
        android:hint="Selecione sua turma..."
        android:padding="12dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAno" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/editAno"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/Ano"
        android:hint="Selecione seu ano..."
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNome" />

    <Spinner
        android:id="@+id/editSala"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:descendantFocusability="beforeDescendants"
        android:hint="Selecione sua sala..."
        android:isScrollContainer="true"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTurma" />

    <Button
        android:id="@+id/button_continuar"
        style="@style/Theme.CEEPiD.DayNight.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTermo" />

    <TextView
        android:id="@+id/textCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Complete seu cadastro:"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteY="238dp" />

    <RelativeLayout
        android:id="@+id/viewTermo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_continuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSala">

        <CheckBox
            android:id="@+id/checkTermo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termo" />

        <TextView
            android:id="@+id/textTermo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkTermo"
            android:autoLink="web"
            android:paddingStart="3dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/termo_de_uso" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkTermo"

            android:paddingStart="34dp"
            android:paddingBottom="14dp"
            android:text="e a" />

        <TextView
            android:id="@+id/textPolitica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkTermo"
            android:layout_toEndOf="@+id/text"
            android:autoLink="web"
            android:paddingStart="4dp"
            android:paddingBottom="14dp"
            android:text="@string/politica_de_privacidade" />

    </RelativeLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>
